<resources>
    <string name="app_name">ParkIt</string>
    <string name="login_prompt">Log in to your park it account!</string>
    <string name="register_prompt">Create your park it account!</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm password</string>
    <string name="login_stay_signed">Stay signed in!</string>
    <string name="register_agreement">Yes, I agree!</string>
    <string name="register_create_button">Create!</string>
    <string name="login_log_button">Log in!</string>
    <string name="login_forgot">Forgot your password?</string>
    <string name="login_no_acc">Don\'t have an account?</string>
    <string name="register_have_acc">Have an account?</string>
    <string name="login_sign">Sign up here!</string>
    <string name="register_login">Log in here!</string>
    <string name="register_tos">Terms of service</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_back">Close menu</string>
    <string name="drawer_cars">My cars</string>
    <string name="drawer_reservations">Reservations</string>
    <string name="drawer_settings">Settings</string>
    <string name="drawer_about">About</string>
    <string name="drawer_log_out">Log out</string>
    <string name="reset_prompt">Please enter your email address to request a password reset.</string>
    <string name="reset_reset_button">Reset!</string>
    <string name="reset_contact_view">Contact with support</string>
    <string name="reset_contact_link">Contact here!</string>
    <string name="name_hint">Name</string>
    <string name="surname_hint">Surname</string>
    <string name="action_bar">Bar</string>
    <string name="set_data_button">Set your data!</string>
    <string name="new_password_hint">New password</string>
    <string name="previous_password_hint">Previous password</string>
    <string name="change_password_button">Change password!</string>
    <string name="add_car_button">Add car!</string>
    <string name="car_hint">Car brand</string>
    <string name="license_hint">License plate</string>
    <string name="add_car_prompt">Add your car and it\'s license plate</string>
    <string name="change_personal_prompt">Change your personal data</string>
    <string name="change_password_prompt">Change your password</string>
    <string name="recycle_car_add">Add a car</string>
    <string name="username_hint">Username</string>
    <string name="model_hint">Model</string>
    <string name="date_select_car">Select your car</string>
    <string name="date_select_date">Select reservation date</string>
    <string name="res_btn_check_sectors">Check sectors!</string>
    <string name="res_btn_pick">Pick date and time</string>
    <string name="set_password_button">Change your password!</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_submit_park_it">Park it!</string>
    <string name="submit_title">Submit your reservation</string>
</resources>